Quick overflow fix

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -44,12 +44,10 @@
 }
 
 html,
-body,
-main {
+body {
   max-width: 100vw;
-  height: 100vh;
-  /* overflow-x: hidden; */
-  /* overflow-y: hidden; */
+  overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 /* Font Classes */
